# npcink-ai-cloud

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.m4-preview.yml  docker-compose.p5-b4-runtime-proof.yml  docker-compose.prod.yml  docker-compose.runtime.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  task-contract-geo-and-routing.json
.github/: pull_request_template.md
app/: __init__.py
ci/: pytest-backend-durations.json
config/: cloud-anti-drift-high-risk-surfaces-v1.json
deploy/: Caddyfile.prod  OPS_PLAYBOOK.md  PRODUCTION_GITHUB_DEPLOY.md  PROJECTION_DRILL_EVIDENCE_2026-04-15.md  RELEASE_CHECKLIST.md  WORKSPACE_TARGET.md  backup-restore-drill.sh  bind-domain-to-ssh-host.sh  bootstrap-portal-site-to-ssh-host.sh  bundle-images.sh  certificate-renewal-readiness.sh  common.sh  deploy-static-terms-to-ssh-host.sh  deploy-to-ssh-host.sh  env-to-ssh-host.sh  m4-preview-deploy.sh  magick-domain-nginx.conf.template  nginx.dev.conf  nginx.m4-preview.conf  nginx.prod.conf  otel-collector.config.yml  portal-smoke-to-ssh-host.sh  production-performance-baseline-to-ssh-host.sh  release-smoke.sh  remote-baseline-status.sh  remote-bootstrap-portal-site.sh  remote-env-upsert.sh  remote-load-and-up.sh  remote-migrate.sh  remote-operational-ready.sh  remote-portal-smoke.sh  remote-provider-status.sh  remote-refresh-providers.sh  remote-seed-runtime.sh  remote-smoke.sh  remote-wp-cron.sh  runtime-data-encryption-cutover.sh  runtime-data-encryption-recovery.sh  validate-secret-rotation.sh  verify-release-bundle.sh  (+2 more)
(+919 files in other folders)
