[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magick-ai-cloud"
version = "0.1.0"
description = "Hosted model runtime for Magick AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "gunicorn>=23.0,<24.0",
  "uvicorn[standard]>=0.34,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic-settings>=2.8,<3.0",
  "httpx>=0.28,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.2,<6.0",
  "PyJWT[crypto]>=2.9,<3.0",
  "alembic>=1.14,<2.0",
  "opentelemetry-api>=1.30,<2.0",
  "opentelemetry-sdk>=1.30,<2.0",
  "opentelemetry-exporter-otlp>=1.30,<2.0",
  "Pillow>=11.0,<12.0",
  "python-multipart>=0.0.18,<1.0",
  "pymilvus>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "--ignore=tests/domain/test_addon_projection_repository.py",
  "--ignore=tests/api/test_addon_routes.py",
  "--ignore=tests/workers/test_addon_projection_worker.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
